<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentTop="true"
        android:background="@drawable/side_nav_bar"
        android:gravity="center_vertical|center"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_marginEnd="-1dp"
            android:layout_marginRight="-1dp" />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fr11"
            android:textColorLink="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_marginEnd="-1dp"
            android:layout_marginRight="-1dp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="320dp"
            android:layout_height="41dp"
            android:hint="@string/fr11_email"
            android:inputType="textEmailAddress"
            tools:background="?attr/colorButtonNormal" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="320dp"
            android:layout_height="38dp"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="30dip"
            android:background="?attr/colorButtonNormal"
            android:hint="@string/fr11_password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_marginEnd="-1dp"
            android:layout_marginRight="-1dp" />

    </LinearLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="104dp"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:text="@string/boton_sigIn" />

</RelativeLayout>